--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,13 @@ layout: page
     <div class="c-article__main">
         {{ content }}
 		{% include comment.html %}
+        <script src="https://utteranc.es/client.js"
+        repo="effectivemadness/effectivemadness.github.io"
+        issue-term="url"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+        </script>
     </div>
     <footer class="c-article__footer">
         <p>
